--- a/fitness-tracker-frontend/projects/home-lib/src/lib/views/home-landing/home-landing.html
+++ b/fitness-tracker-frontend/projects/home-lib/src/lib/views/home-landing/home-landing.html
@@ -1,4 +1,4 @@
-<home-home-hero-section></home-home-hero-section>
+<home-home-hero></home-home-hero>
 <div class="landing-content">
     <p>home-landing works!</p>
 </div>
