Added animated home hero component

--- a/fitness-tracker-frontend/projects/exercises-lib/src/lib/views/exercises-overview/exercises-overview.html
+++ b/fitness-tracker-frontend/projects/exercises-lib/src/lib/views/exercises-overview/exercises-overview.html
@@ -1,4 +1,4 @@
-<section class="exercises-overview">
+<section class="exercises-overview page-container">
   <header class="overview-header">
     <div class="header-content">
       <h1>Exercises</h1>
