--- a/fitness-tracker-frontend/projects/plans-lib/src/lib/views/plans-overview/plans-overview.html
+++ b/fitness-tracker-frontend/projects/plans-lib/src/lib/views/plans-overview/plans-overview.html
@@ -1,4 +1,4 @@
-<section class="plans-overview">
+<section class="plans-overview page-container">
     <header class="overview-header">
         <div class="header-content">
             <h1>Training Plans</h1>
