--- a/fitness-tracker-frontend/projects/plans-lib/src/lib/views/plan-detail/plan-detail.scss
+++ b/fitness-tracker-frontend/projects/plans-lib/src/lib/views/plan-detail/plan-detail.scss
@@ -169,12 +169,11 @@ mat-card-actions {
     cursor: not-allowed;
 }
 
-/* Timeline Styles */
 .timeline {
     position: relative;
     padding: 1rem 0 1rem 2rem;
     margin-left: 1rem;
-    border-left: 2px solid rgba(var(--fitness-primary-rgb), 0.3); // Primary color with opacity
+    border-left: 2px solid rgba(var(--fitness-primary-rgb), 0.3);
 }
 
 .timeline-item {
@@ -193,7 +192,7 @@ mat-card-actions {
 
 .timeline-marker {
     position: absolute;
-    left: -2.6rem; // Adjust based on padding and border width
+    left: -2.6rem;
     top: 1.5rem;
     width: 1rem;
     height: 1rem;
